[gd_scene load_steps=3 format=3 uid="uid://b73b3eq06rkt3"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_4fj3u"]
[ext_resource type="Texture2D" uid="uid://cn8sg2h86o1rq" path="res://imported_assets/Menu1.jpg" id="2_y888b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fj3u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.5
offset_top = -101.0
offset_right = 20.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Info" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="Speedrun" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speedrun"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume:"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume:"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(1.06667, 1.06755)
texture = ExtResource("2_y888b")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Speedrun" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
